--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
-    "axios": "^1.2.6",
+    "aws-sdk": "^2.1306.0",
+    "axios": "^1.3.0",
     "next": "13.1.1",
     "prisma": "^4.9.0",
     "react": "18.2.0",
