--- a/.env
+++ b/.env
@@ -8,3 +8,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://samarpit:samarpit@drive1.xxmwqwx.mongodb.net/drive1?retryWrites=true&w=majority"
+ACCESS_KEY='AKIAYUIAHWNBEUHWYG57'
+SECRET_KEY='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'
+BUCKET_NAME='my-testing-drive'
