--- a/.env
+++ b/.env
@@ -11,3 +11,4 @@ DATABASE_URL="mongodb+srv://samarpit:samarpit@drive1.xxmwqwx.mongodb.net/drive1?
 ACCESS_KEY='AKIAYUIAHWNBEUHWYG57'
 SECRET_KEY='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'
 BUCKET_NAME='my-testing-drive'
+BASE_URL="http://localhost:3000"
