--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev ",
     "build": "next build",
+    "migrate": "npx prisma migrate dev",
     "start": "next start",
     "lint": "next lint"
   },
@@ -28,6 +29,7 @@
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
+    "react-toastify": "^9.1.1",
     "typescript": "4.9.4",
     "zod": "^3.20.2"
   },
