--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "postinstall": "npx prisma generate",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.264.0",
     "@emotion/react": "^11.10.5",
