--- a/.env
+++ b/.env
@@ -6,9 +6,11 @@
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+# DATABASE_URL="postgresql://samarpit:samarpit@localhost:5432/mydrive?schema=public"
 
 DATABASE_URL="mongodb+srv://samarpit:samarpit@drive1.xxmwqwx.mongodb.net/drive1?retryWrites=true&w=majority"
 ACCESS_KEY='AKIAYUIAHWNBEUHWYG57'
 SECRET_KEY='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'
 BUCKET_NAME='my-testing-drive'
+REGION='us-west-2'
 BASE_URL="http://localhost:3000"
