--- a/.env
+++ b/.env
@@ -9,8 +9,8 @@
 # DATABASE_URL="postgresql://samarpit:samarpit@localhost:5432/mydrive?schema=public"
 
 DATABASE_URL="mongodb+srv://samarpit:samarpit@drive1.xxmwqwx.mongodb.net/drive1?retryWrites=true&w=majority"
-ACCESS_KEY='AKIAYUIAHWNBEUHWYG57'
-SECRET_KEY='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'
-BUCKET_NAME='my-testing-drive'
+ACCESS_KEY='AKIA4XURFWASNC4BEQVB'
+SECRET_KEY='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'
+BUCKET_NAME='test-vp'
 REGION='us-west-2'
 BASE_URL="http://localhost:3000"
